ferric/tests/ui/semantic_err_05.stderr
error: duplicate observe of variable `grass_wet`
  --> tests/ui/semantic_err_05.rs:28:13
   |
28 |     observe grass_wet;
   |             ^^^^^^^^^
